--- a/views/index.hbs
+++ b/views/index.hbs
@@ -37,7 +37,7 @@
         };
  
         // Display the image.
-        var sourceImageUrl = "https://{{../accountName}}.blob.core.windows.net/{{../containerName}}/{{name}}";
+        var sourceImageUrl = "https://dicodestore.blob.core.windows.net/image2upload/9825132602449511-Bodega%20Head,%20CA,%20US.jpg";
         document.querySelector("#sourceImage").src = sourceImageUrl;
  
         // Make the REST API call.
