--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
 
 <p id="message">{{message}}</p>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript">
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js">
     function processImage() {
         // **********************************************
         // *** Update or verify the following values. ***
