--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,12 +18,13 @@
         <textarea id="responseTextArea" class="UIInput"
                   style="width:580px; height:400px;"></textarea>
     </div>
-    <div id="imageDiv" style="width:420px; display:table-cell;">
-        Source image:
-        <br><br>
-        <img id="inputImage" src="https://{{../accountName}}.blob.core.windows.net/{{../containerName}}/{{name}}" width="400"/>
-    </div>
 </div>
+
+<h2>Uploaded Image</h2>
+{{#each this.thumbnails}}
+  <img id="inputImage" src="https://{{../accountName}}.blob.core.windows.net/{{../containerName}}/{{name}}" width="400">
+{{/each}}
+
 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
