--- a/views/index.hbs
+++ b/views/index.hbs
@@ -49,10 +49,10 @@
         // **********************************************
         // *** Update or verify the following values. ***
         // **********************************************
- 
+
         // Replace <Subscription Key> with your valid subscription key.
         var subscriptionKey = "449e9fbe8aa74a749d53b414f146fc80";
- 
+
         // You must use the same Azure region in your REST API method as you used to
         // get your subscription keys. For example, if you got your subscription keys
         // from the West US region, replace "westcentralus" in the URL
@@ -63,40 +63,40 @@
         // this region.
         var uriBase =
             "https://southeastasia.api.cognitive.microsoft.com/vision/v2.0/analyze";
- 
+
         // Request parameters.
         var params = {
-            "visualFeatures": "Categories,Description,Color",
+            "visualFeatures": "Description",
             "details": "",
             "language": "en",
         };
- 
+
         // Display the image.
         var sourceImageUrl = document.getElementById("inputImage").src;
         document.querySelector("#sourceImage").src = sourceImageUrl;
- 
+
         // Make the REST API call.
         $.ajax({
             url: uriBase + "?" + $.param(params),
- 
+
             // Request headers.
             beforeSend: function(xhrObj){
                 xhrObj.setRequestHeader("Content-Type","application/json");
                 xhrObj.setRequestHeader(
                     "Ocp-Apim-Subscription-Key", subscriptionKey);
             },
- 
+
             type: "POST",
- 
+
             // Request body.
             data: '{"url": ' + '"' + sourceImageUrl + '"}',
         })
- 
+
         .done(function(data) {
             // Show formatted JSON on webpage.
             $("#responseTextArea").val(JSON.stringify(data, null, 2));
         })
- 
+
         .fail(function(jqXHR, textStatus, errorThrown) {
             // Display error message.
             var errorString = (errorThrown === "") ? "Error. " :
