--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,14 +9,17 @@
 
 <p id="message">{{message}}</p>
 
-<button onclick="processImage()">Analyze image</button>
-<br><br>
 <div id="wrapper" style="width:1020px; display:table;">
     <div id="jsonOutput" style="width:600px; display:table-cell;">
         Response:
         <br><br>
         <textarea id="responseTextArea" class="UIInput"
                   style="width:580px; height:400px;"></textarea>
+    </div>
+    <div id="imageDiv" style="width:420px; display:table-cell;">
+        Source image:
+        <br><br>
+        <img id="sourceImage" width="400" />
     </div>
 </div>
 
