--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,6 +5,7 @@
   <h2>Select an image to upload:</h2>
   <div class="upload-container"><input id="file-picker" type="file" name="image"></div>
   <div><input type="submit" value="Upload Image"></div>
+  <button onclick="processImage()">Analyze image</button>
 </form>
 
 <p id="message">{{message}}</p>
