--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,55 +1,15 @@
-<h1>Image Analyzer</h1>
+<h1>Image Resizer</h1>
 
 <h2>Upload photos</h2>
 <form id="upload-form" action="/upload" method="POST" enctype="multipart/form-data">
   <h2>Select an image to upload:</h2>
   <div class="upload-container"><input id="file-picker" type="file" name="image"></div>
   <div><input type="submit" value="Upload Image"></div>
-  <button onclick="processImage()">Analyze image</button>
 </form>
-
 <p id="message">{{message}}</p>
 
-<div id="wrapper" style="width:1020px; display:table;">
-    <div id="jsonOutput" style="width:600px; display:table-cell;">
-        Response:
-        <br><br>
-        <textarea id="responseTextArea" class="UIInput"
-                  style="width:580px; height:400px;"></textarea>
-    </div>
-    <div id="imageDiv" style="width:420px; display:table-cell;">
-        Source image:
-        <br><br>
-        <img id="sourceImage" width="400" />
-    </div>
-</div>
-
-<h2>Uploaded Image</h2>
-{{#each this.thumbnails}}
-  <img id="inputImage" src="https://{{../accountName}}.blob.core.windows.net/{{../containerName}}/{{name}}" width="400">
-{{/each}}
-
-
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-
-    const message = document.getElementById('message');
-    const picker = document.getElementById('file-picker');
-
-    document.getElementById('upload-form').addEventListener('submit', (e) => {
-
-      message.innerText = '';
-
-      if(!picker.files.length) {
-        message.innerText = 'Please select an image to upload.';
-        e.preventDefault();
-        return false;
-      }
-    });
-
-  });
-  
-  function processImage() {
+<script type="text/javascript">
+    function processImage() {
         // **********************************************
         // *** Update or verify the following values. ***
         // **********************************************
@@ -70,13 +30,13 @@
 
         // Request parameters.
         var params = {
-            "visualFeatures": "Description",
+            "visualFeatures": "Categories,Description,Color",
             "details": "",
             "language": "en",
         };
 
         // Display the image.
-        var sourceImageUrl = document.getElementById("inputImage").src;
+        var sourceImageUrl = document.getElementById("inputImage").value;
         document.querySelector("#sourceImage").src = sourceImageUrl;
 
         // Make the REST API call.
@@ -110,4 +70,49 @@
             alert(errorString);
         });
     };
+</script>
+
+<h1>Analyze image:</h1>
+Enter the URL to an image, then click the <strong>Analyze image</strong> button.
+<br><br>
+Image to analyze:
+<input type="text" name="inputImage" id="inputImage"
+    value="document.getElementById("uploadImage").src" />
+<button onclick="processImage()">Analyze image</button>
+<br><br>
+<div id="wrapper" style="width:1020px; display:table;">
+    <div id="jsonOutput" style="width:600px; display:table-cell;">
+        Response:
+        <br><br>
+        <textarea id="responseTextArea" class="UIInput"
+                  style="width:580px; height:400px;"></textarea>
+    </div>
+    <div id="imageDiv" style="width:420px; display:table-cell;">
+        Source image:
+        <br><br>
+        <img id="sourceImage" width="400" />
+    </div>
+</div>
+
+<h2>Generated Thumbnails</h2>
+{{#each this.thumbnails}}
+  <img id="uploadImage" src="https://{{../accountName}}.blob.core.windows.net/{{../containerName}}/{{name}}" width="400">
+{{/each}}
+
+<hr>
+<p>This app has no official privacy policy. Your data will be uploaded to a service in order to produce a thumbnail. Your images will be public once you upload them and there is no automated way to remove them.</p>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const message = document.getElementById('message');
+    const picker = document.getElementById('file-picker');
+    document.getElementById('upload-form').addEventListener('submit', (e) => {
+      message.innerText = '';
+      if(!picker.files.length) {
+        message.innerText = 'Please select an image to upload.';
+        e.preventDefault();
+        return false;
+      }
+    });
+  });
 </script>
