--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,6 +8,7 @@
 </form>
 <p id="message">{{message}}</p>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 <script type="text/javascript">
     function processImage() {
         // **********************************************
@@ -73,11 +74,11 @@
 </script>
 
 <h1>Analyze image:</h1>
-Enter the URL to an image, then click the <strong>Analyze image</strong> button.
+Enter the URL of uploaded image by right click the image and copy link.
 <br><br>
 Image to analyze:
 <input type="text" name="inputImage" id="inputImage"
-    value="document.getElementById("uploadImage").src" />
+    value="" />
 <button onclick="processImage()">Analyze image</button>
 <br><br>
 <div id="wrapper" style="width:1020px; display:table;">
