--- a/views/index.hbs
+++ b/views/index.hbs
@@ -36,7 +36,7 @@
 
         // Request parameters.
         var params = {
-            "visualFeatures": "Categories,Description,Color",
+            "visualFeatures": "Description",
             "details": "",
             "language": "en",
         };
@@ -79,7 +79,7 @@
 </script>
 
 <h1>Analyze image:</h1>
-Enter the URL of uploaded image by right click the image and copy link.
+Enter the URL of uploaded image by <strong> right click the image </strong> and <strong> copy image link </strong>.
 <br><br>
 Image to analyze:
 <input type="text" name="inputImage" id="inputImage"
@@ -91,7 +91,7 @@ Image to analyze:
         Response:
         <br><br>
         <textarea id="responseTextArea" class="UIInput"
-                  style="width:580px; height:400px;"></textarea>
+                  style="width:580px; height:100px;"></textarea>
     </div>
     <div id="imageDiv" style="width:420px; display:table-cell;">
         Source image:
