--- a/views/index.hbs
+++ b/views/index.hbs
@@ -36,8 +36,8 @@
 
         // Request parameters.
         var params = {
-            "visualFeatures": "Description",
-            "details": "",
+            "visualFeatures": "Captions",
+            "details": "text",
             "language": "en",
         };
 
