--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,5 @@
-<h1>Image Resizer</h1>
+<h1>Image Analyzer</h1>
 
-<h2>Upload photos</h2>
 <form id="upload-form" action="/upload" method="POST" enctype="multipart/form-data">
   <h2>Select an image to upload:</h2>
   <div class="upload-container"><input id="file-picker" type="file" name="image"></div>
@@ -87,7 +86,6 @@
     };
 </script>
 
-<h1>Analyze image:</h1>
 Enter the URL of uploaded image by <strong> right click the image </strong> and <strong> copy image link </strong>.
 <br><br>
 Image to analyze:
