--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
         // **********************************************
 
         // Replace <Subscription Key> with your valid subscription key.
-        var subscriptionKey = "449e9fbe8aa74a749d53b414f146fc80";
+        var subscriptionKey = "<subs key>";
 
         // You must use the same Azure region in your REST API method as you used to
         // get your subscription keys. For example, if you got your subscription keys
